--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,38 @@
-pom.xml
-pom.xml.asc
+/.classpath
+/.project
+/classes/
+/lib/
+/logs/
 *.jar
 *.class
-/lib/
-/classes/
+/java.hprof.txt
 /target/
-/checkouts/
-.lein-deps-sum
-.lein-repl-history
-.lein-plugins/
-.lein-failures
-.nrepl-port
-.cpcache/
+*.bbl
+*.blg
+*.lof
+*.log
+*.pdf
+*.toc
+*.aux
+*.gz
+*.tar
+*.bcf
+*.idx
+*.loe
+*.run.xml
+*.nlo
+*.out
+*.glg
+*.glo
+*.gls
+*.ilg
+*.ind
+*.out
+*.xdy
+*.ist
+*syntex*
+/.externalToolBuilders/
+/.settings/
+/.texlipse/
+/dummy/
+/.texlipse
