MikTeX 21.3; passing tests without font packages; microtype package

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,12 @@
 *.xdy
 *.ist
 *syntex*
+*.plCode
+*.plData
+*.plExercise
+*.plMath
+*.plNote
+*.plQuote
 /.externalToolBuilders/
 /.settings/
 /.texlipse/
